@@ -14,6 +14,9 @@ synaptic (0.62) UNRELEASED; urgency=low
     - translation update (thanks to Tomasz Argasiński)
   * gtk/gsynaptic.cc:
     - fix typo (thanks to  Sarah Hobbs)
+  * gtk/rgsummarywindow.cc:
+    - code cleanup and fix potential endless loop (thanks to
+      Sebastien Bacher)
 
   [ Brian Murray ]
   * typo fixes (LP: #64482, LP: #157850, LP: #179914, LP: #179912, LP: #179909)
